fix: popup dark mode

--- a/src/popup/index.css
+++ b/src/popup/index.css
@@ -5,3 +5,9 @@ html, body {
     padding: 0;
     margin: 0;
 }
+
+@media (prefers-color-scheme: dark) {
+    .popup {
+        background: #1f1f1f;
+    }
+}
